静态页面的编写 6-18

--- a/毕业项目源码和数据库/源码/AnTen/AnTen/AnTen(UI).csproj
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/AnTen(UI).csproj
@@ -144,12 +144,15 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\EpidMap\china.js" />
+    <Content Include="Content\EpidMap\echarts.min.js" />
+    <Content Include="Content\EpidMap\jquery-3.4.1.min.js" />
+    <Content Include="Content\PMain\page.css" />
     <Content Include="Content\PMain\rain\base_aio.css" />
     <Content Include="Content\PMain\global.css" />
     <Content Include="Content\PMain\rain\index_355.css" />
     <Content Include="Content\PMain\lyc.css" />
     <Content Include="Content\PMain\myaglobal.css" />
-    <Content Include="Content\PMain\page.css" />
     <Content Include="Content\PMain\slick.css" />
     <Content Include="Content\Public\animate.css" />
     <Content Include="Content\Public\global.css" />
@@ -161,19 +164,47 @@
     <Content Include="Content\Site.css" />
     <Content Include="image\Appicon.png" />
     <Content Include="image\bg.jpg" />
+    <Content Include="image\head_sea.png" />
     <Content Include="image\hosicon.png" />
     <Content Include="image\icon1.png" />
+    <Content Include="image\lb4.jpg" />
+    <Content Include="image\ln3-1.jpg" />
+    <Content Include="image\ln3-2.jpg" />
+    <Content Include="image\ln3-3.png" />
+    <Content Include="image\ln4-1.jpg" />
+    <Content Include="image\ln4-2.jpg" />
+    <Content Include="image\ln4-3.jpg" />
+    <Content Include="image\ln4-4.jpg" />
+    <Content Include="image\ln4-5.jpg" />
+    <Content Include="image\ln4-6.jpg" />
+    <Content Include="image\ln4-8.jpg" />
     <Content Include="image\logo.png" />
     <Content Include="image\logo2.png" />
     <Content Include="image\Logo3.png" />
     <Content Include="image\png3.png" />
     <Content Include="image\png4.png" />
     <Content Include="image\png5.png" />
+    <Content Include="image\Rlist_1.png" />
+    <Content Include="image\Rlist_2.png" />
+    <Content Include="image\Rlist_3.png" />
+    <Content Include="image\Rlist_4.png" />
+    <Content Include="image\Rlist_5.png" />
     <Content Include="image\usebg.png" />
     <Content Include="image\usericon.png" />
     <Content Include="image\weixinicon.png" />
+    <Content Include="image\专科专病.png" />
     <Content Include="image\北京协和.png" />
+    <Content Include="image\医院公告.jpg" />
+    <Content Include="image\医院地址.jpg" />
+    <Content Include="image\医院地址.png" />
+    <Content Include="image\十安医院说.png" />
+    <Content Include="image\就医须知.png" />
     <Content Include="image\患者.png" />
+    <Content Include="image\ln4-7.jpg" />
+    <Content Include="image\科室导航.jpg" />
+    <Content Include="image\重大新闻.jpg" />
+    <Content Include="image\门诊.jpg" />
+    <Content Include="image\门诊icon.png" />
     <Content Include="image\预约挂号.png" />
     <Content Include="image\预约挂号2.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -322,6 +353,9 @@
     <Content Include="Views\AT_PMain\PanMain.cshtml" />
     <Content Include="Views\Shared\_LayoutPage_Pan.cshtml" />
     <Content Include="Scripts\PMain\jquery.min.js" />
+    <Content Include="Views\AT_PMain\Index.cshtml" />
+    <Content Include="Views\AT_PMain\Pan_InqDoc.cshtml" />
+    <Content Include="Views\AT_PMain\Virture.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
