6/27 患者板块完善

--- a/毕业项目源码和数据库/源码/AnTen/AnTen/AnTen(UI).csproj
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/AnTen(UI).csproj
@@ -147,29 +147,37 @@
     <Content Include="Content\EpidMap\china.js" />
     <Content Include="Content\EpidMap\echarts.min.js" />
     <Content Include="Content\EpidMap\jquery-3.4.1.min.js" />
-    <Content Include="Content\PMain\page.css" />
+    <Content Include="Content\LayoutPage\page.css" />
     <Content Include="Content\PMain\rain\base_aio.css" />
-    <Content Include="Content\PMain\global.css" />
+    <Content Include="Content\LayoutPage\global.css" />
     <Content Include="Content\PMain\rain\index_355.css" />
-    <Content Include="Content\PMain\lyc.css" />
-    <Content Include="Content\PMain\myaglobal.css" />
+    <Content Include="Content\LayoutPage\lyc.css" />
+    <Content Include="Content\LayoutPage\myaglobal.css" />
     <Content Include="Content\PMain\slick.css" />
-    <Content Include="Content\Public\animate.css" />
-    <Content Include="Content\Public\global.css" />
-    <Content Include="Content\Public\mCustomScrollbar.css" />
-    <Content Include="Content\Public\page.css" />
-    <Content Include="Content\Public\slick.css" />
+    <Content Include="Content\MainPage\animate.css" />
+    <Content Include="Content\MainPage\global.css" />
+    <Content Include="Content\MainPage\mCustomScrollbar.css" />
+    <Content Include="Content\MainPage\page.css" />
+    <Content Include="Content\MainPage\slick.css" />
     <Content Include="Content\SeaDoc\base.css" />
     <Content Include="Content\SeaDoc\clinic.css" />
     <Content Include="Content\SeaDoc\DisKnow.css" />
     <Content Include="Content\SeaDoc\FinHos.css" />
     <Content Include="Content\SeaDoc\SeaByDis.css" />
     <Content Include="Content\SeaDoc\SeaByHos.css" />
+    <Content Include="Content\SelSym\chuk.css" />
+    <Content Include="Content\SelSym\disstor.css" />
+    <Content Include="Content\SelDia\icon.css" />
+    <Content Include="Content\SelSym\jbk_took.css" />
+    <Content Include="Content\SelDia\main_d80.css" />
+    <Content Include="Content\SelSym\Selmain.css" />
+    <Content Include="Content\SelSym\supporbtn.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="image\Appicon.png" />
     <Content Include="image\bg.jpg" />
+    <Content Include="image\body.png" />
     <Content Include="image\head_sea.png" />
     <Content Include="image\hosicon.png" />
     <Content Include="image\icon1.png" />
@@ -188,6 +196,7 @@
     <Content Include="image\logo.png" />
     <Content Include="image\logo2.png" />
     <Content Include="image\Logo3.png" />
+    <Content Include="image\man_bm.png" />
     <Content Include="image\png3.png" />
     <Content Include="image\png4.png" />
     <Content Include="image\png5.png" />
@@ -199,6 +208,8 @@
     <Content Include="image\usebg.png" />
     <Content Include="image\usericon.png" />
     <Content Include="image\weixinicon.png" />
+    <Content Include="image\woman_bm.png" />
+    <Content Include="image\woman_zm.png" />
     <Content Include="image\专科专病.png" />
     <Content Include="image\乐享童年.jpg" />
     <Content Include="image\价格公示.png" />
@@ -256,7 +267,8 @@
     <Content Include="Scripts\esm\popper.js.map" />
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
-    <Content Include="Content\PMain\jquery.mCustomScrollbar.css" />
+    <Content Include="Content\LayoutPage\jquery.mCustomScrollbar.css" />
+    <Content Include="Content\SelDia\app_1292.css" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -279,6 +291,15 @@
     <Content Include="Scripts\popper.min.js" />
     <Content Include="Scripts\SeaDoc\clinic.js" />
     <Content Include="Scripts\SeaDoc\common.js" />
+    <Content Include="Scripts\SelSym\citySwitch.js" />
+    <Content Include="Scripts\SelSym\common.js" />
+    <Content Include="Scripts\SelSym\hm.js" />
+    <Content Include="Scripts\SelSym\hm2204.js" />
+    <Content Include="Scripts\SelSym\index.js" />
+    <Content Include="Scripts\SelSym\jbk_tool.js" />
+    <Content Include="Scripts\SelSym\jquery_min.js" />
+    <Content Include="Scripts\SelSym\layer_min.js" />
+    <Content Include="Scripts\SelSym\regnay.js" />
     <Content Include="Scripts\src\index.js" />
     <Content Include="Scripts\src\methods\defaults.js" />
     <Content Include="Scripts\src\methods\destroy.js" />
@@ -389,6 +410,7 @@
     <Content Include="Views\AT_PMain\ThNoto.cshtml" />
     <Content Include="Views\AT_PMain\PatQueAnR.cshtml" />
     <Content Include="Views\AT_PMain\PoScHe.cshtml" />
+    <Content Include="Views\AT_PMain\AppReg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
