--- a/毕业项目源码和数据库/源码/AnTen/AnTen/bin/AnTen.dll.config
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/bin/AnTen.dll.config
@@ -69,4 +69,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="TA_DoctorEntities1" connectionString="metadata=res://*/AnTen.csdl|res://*/AnTen.ssdl|res://*/AnTen.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=TA_Doctor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+  </connectionStrings>
 </configuration>
